Statistical analysis working for generator runs